--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,7 @@
 <div class="container">
   <app-header [title]="title"></app-header>
 
-  <p>
-    layout works!
-  </p>
+  <router-outlet></router-outlet>
 
   <app-footer [title]="title"></app-footer>
 </div>
