--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  <a class="navbar-brand" href="#">{{title}}</a>
+  <a class="navbar-brand" [routerLink]="['/']">{{title}}</a>
   <button class="navbar-toggler" type="button"
           data-toggle="collapse"
           data-target="#navbarSupportedContent"
@@ -12,10 +12,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Grupos</a>
+        <a class="nav-link" [routerLink]="['/concerts']" routerLinkActive="active">Conciertos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Conciertos</a>
+        <a class="nav-link" [routerLink]="['/groups']" routerLinkActive="active">Grupos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/recordings']" routerLinkActive="active">Discos</a>
       </li>
     </ul>
   </div>
