Add event to the table component

--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -5,7 +5,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of data">
+  <tr *ngFor="let row of data" (click)="onClick(row)">
     <td *ngFor="let field of fields">{{row[field]}}</td>
   </tr>
   </tbody>
